# mypyproj-cli

./: .gitignore  Pipfile  README.md  build.bat  install.bat  install.sh  pyproject.toml  requirements.txt  test.py
src/mypyproj/: __init__.py  __main__.py  main.py
src/mypyproj/commands/: __init__.py  new.py
src/pax/: __init__.py  __main__.py  main.py
src/pax/commands/: __init__.py  add.py  new.py
src/randose/: __init__.py  __main__.py  main.py
src/randose/commands/: __init__.py  new.py
