[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "randose"
version = "0.1.0"
description = "A CLI tool for automating simple tasks."
authors = [{name = "Daniel Rosenwald", email = "danielrosenwald@gmail.com"},]
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "typer[all]",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
randose = "randose.__main__:app"