[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mypyproj"
version = "0.1.3"
description = "A CLI tool for creating and managing Python projects."
authors = [{name = "Daniel Rosenwald", email = "danielrosenwald@gmail.com"},]
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "typer[all]",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
mypyproj = "mypyproj.__main__:app"